<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:focusableInTouchMode="true"
    tools:context="com.ruslanlyalko.agency.presentation.ui.dashboard.DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:background="@drawable/bg_main">

            <ImageView
                android:id="@+id/image_home"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="52dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"
                android:src="@drawable/ic_menu_24dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="48dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="3dp"
                android:src="@drawable/bg_image"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/image_calendar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="52dp"
                android:layout_toStartOf="@id/image_logo"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"
                android:src="@drawable/ic_date_range_24dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/image_notifications"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="52dp"
                android:layout_toStartOf="@id/image_calendar"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"
                android:src="@drawable/ic_notifications_24dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/label_orders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="120dp"
                android:layout_toStartOf="@+id/text_add_more"
                android:text="@string/text_orders"
                android:textAppearance="@style/TextAppearance.Subhead"
                android:textColor="@color/colorTextWhite"
                android:textSize="30sp"
                />

            <TextView
                android:id="@+id/text_add_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/label_orders"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"
                android:text="@string/text_add_more"
                android:textAppearance="@style/TextAppearance.Body2"
                android:textColor="@color/color_selector_add"
                />

            <android.support.v4.view.ViewPager
                android:id="@+id/view_pager_upcoming"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height"
                android:layout_below="@id/label_orders"
                android:layout_marginTop="32dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/label_your_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/text_your_balance"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.Body2"
                android:textColor="@color/colorTextGray"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/text_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_your_balance"
                android:layout_marginStart="32dp"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.Subhead"
                android:textColor="@color/colorTextRed"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="$175,900.00"
                />

            <TextView
                android:id="@+id/label_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_balance"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/text_income"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.Body2"
                android:textColor="@color/colorTextGray"
                android:textSize="13sp"
                />

            <TextView
                android:id="@+id/text_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_income"
                android:layout_marginStart="32dp"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.Subhead"
                android:textColor="@color/colorTextBlackDark"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="+$6,520.00"
                />

            <TextView
                android:id="@+id/label_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/text_balance"
                android:layout_marginEnd="120dp"
                android:layout_marginTop="24dp"
                android:text="@string/text_expense"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.Body2"
                android:textColor="@color/colorTextGray"
                android:textSize="13sp"
                />

            <TextView
                android:id="@+id/text_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/label_expense"
                android:layout_below="@id/label_expense"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.Subhead"
                android:textColor="@color/colorTextBlackDark"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="-$2,270.00"
                />

            <FrameLayout
                android:id="@+id/layout_past"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@id/text_income"
                android:layout_marginTop="12dp"
                android:background="@drawable/gradient_gray" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_past_orders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_past"
                android:focusableInTouchMode="false"
                android:nestedScrollingEnabled="false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_below="@id/recycler_past_orders" />
        </RelativeLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>